--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,6 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color: #eef3f6;
+}
 .font-Prata {
     font-family: 'Prata', serif;
   }
@@ -12,10 +15,8 @@
     font-family: 'Anton SC', sans-serif;
   }
 
-  .btn-primary {
-    background-color: #0368fe;
-    border: none;
-}
+
+
 
 .navbar {
     background: transparent;
@@ -27,4 +28,17 @@
 
 .main-text {
     height: 80vh;
+}
+
+.card {
+    box-shadow: -16px 15px 0px 0px #0368fe;
+  }
+.card:hover {
+  box-shadow: -16px 15px 0px 0px #d8d8d8;
+}
+
+.join-section {
+  background: url('/grrey.png') no-repeat center center/cover;
+  width: 100vw;
+  height:  70vh;
 }
