--- a/frontend/src/components/Map/Map.css
+++ b/frontend/src/components/Map/Map.css
@@ -1,15 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic);
-map { background-color: #0A3A5A; padding: 1rem; -moz-box-sizing: border-box; box-sizing: border-box; -webkit-font-smoothing: antialiased; font-family: 'Source Sans Pro', sans-serif; font-size: 18px; font-weight: 400; }
 
 svg {
-	color: white;
+	color: #002566;
 	display: block;
 	margin: 0 auto;
 	max-width: 1000px;
 }
 path {
 	fill: currentColor;
-	stroke: #000;
+	stroke: #ffffff;
 	stroke-width: 1;
 }
 
@@ -18,6 +17,6 @@ a {
 }
 
 a:hover {
-	color: #a00;
+	color: #0368fe;
 	transition: color 0s;
 }
